<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>org.flickit</groupId>
	<artifactId>flickit-assessment</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>flickit-assessment</name>

	<modules>
		<module>flickit-assessment-core</module>
		<module>flickit-assessment-kit</module>
		<module>flickit-assessment-data</module>
		<module>flickit-assessment-server</module>
		<module>flickit-assessment-common</module>
        <module>flickit-advice-engine</module>
    </modules>

	<properties>
		<revision>0.13.0-SNAPSHOT</revision>

		<java.version>17</java.version>
		<spring-boot.version>3.0.6</spring-boot.version>

		<sentry.version>7.3.0</sentry.version>
		<archunit.version>1.1.0</archunit.version>
        <minio.version>8.5.7</minio.version>
		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>

		<sonar.organization>flickit-platform</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.flickit</groupId>
				<artifactId>flickit-assessment-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>org.flickit</groupId>
				<artifactId>flickit-assessment-kit</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>org.flickit</groupId>
				<artifactId>flickit-assessment-data</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>org.flickit</groupId>
				<artifactId>flickit-assessment-common</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>org.flickit</groupId>
				<artifactId>flickit-assessment-server</artifactId>
				<version>${revision}</version>
			</dependency>
            <dependency>
                <groupId>org.flickit</groupId>
                <artifactId>flickit-advice-engine</artifactId>
                <version>${revision}</version>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.12.3</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit</artifactId>
            <version>${archunit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <version>${archunit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.minio</groupId>
            <artifactId>minio</artifactId>
            <version>${minio.version}</version>
        </dependency>

		<dependency>
			<groupId>io.sentry</groupId>
			<artifactId>sentry-spring-boot-starter-jakarta</artifactId>
			<version>${sentry.version}</version>
		</dependency>
		<dependency>
			<groupId>io.sentry</groupId>
			<artifactId>sentry-jdbc</artifactId>
			<version>${sentry.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>${jib-maven-plugin.version}</version>
				<configuration>
					<skip>true</skip>
					<container>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<labels>
							<org.opencontainers.image.source>
								https://github.com/flickit-platform/flickit-assessment
							</org.opencontainers.image.source>
						</labels>
					</container>
					<from>
						<image>ghcr.io/flickit-platform/jdk:17.0.7</image>
					</from>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
